--- a/UNet_segmentation.ipynb
+++ b/UNet_segmentation.ipynb
@@ -329,13 +329,13 @@
     "    transforms.Normalize([0.5], [0.5])\n",
     "])\n",
     "#データセットが存在するディレクトリのパス指定\n",
-    "data_source_dir = \"./Crack/dataset\"\n",
+    "data_source_dir = \"/home/es1video10/datasets/Crack/dataset\"\n",
     "#学習エポック数\n",
     "num_epochs = 50\n",
     "#最良ロスの定義(初期値はinf)\n",
     "best_loss = float(\"inf\")\n",
     "#実験結果のディレクトリのパス指定\n",
-    "result_dir = \"./Crack/result\"\n",
+    "result_dir = \"/home/es1video10/datasets/Crack/result\"\n",
     "\n",
     "\n",
     "\n",
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,8 +584,8 @@
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize([0.5], [0.5])\n",
     "])\n",
-    "data_source_dir = \"./Crack/dataset\"\n",
-    "result_dir = \"./Crack/result\"\n",
+    "data_source_dir = \"/home/es1video10/datasets/Crack/dataset\"\n",
+    "result_dir = \"/home/es1video10/datasets/Crack/result\"\n",
     "check_path = result_dir + \"/checkpoint.pth.tar\"\n",
     "\n",
     "model = UNet(n_channels=n_channels, n_classes=n_classes, filter_num=filter_num, up_mode=\"interpolation\")\n",
@@ -606,11 +606,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/es1video10/pytorch/lib/python3.6/site-packages/ipykernel_launcher.py:1: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c986733dc48d4b4cad19ad1738dce93b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=21.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "tbar = tqdm(test_dataloader)\n",
     "model.eval()\n",
@@ -619,18 +650,25 @@
     "        img, label = batch\n",
     "        img = img.to(device)\n",
     "        output = model(img)\n",
-    "        output = output.cpu().detach().numpy()\n",
+    "        output = output.cpu().numpy()\n",
     "        #不必要な軸の削減\n",
     "        output = np.squeeze(output, 0)\n",
     "        #出力をsoftmaxで確率に変換\n",
     "        output = softmax_numpy(output)\n",
     "        #出力確率の最大値を算出\n",
     "        output = np.argmax(output, axis=0)\n",
-    "        label = label.cpu().numpy()\n",
+    "        label = label.numpy()\n",
     "        \n",
     "        get_score(output, label, result_dir, itr)\n",
     "        save_img(output, label, result_dir, itr)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
