--- a/UNet_segmentation.ipynb
+++ b/UNet_segmentation.ipynb
@@ -329,13 +329,13 @@
     "    transforms.Normalize([0.5], [0.5])\n",
     "])\n",
     "#データセットが存在するディレクトリのパス指定\n",
-    "data_source_dir = \"/home/es1video10/datasets/Crack/dataset\"\n",
+    "data_source_dir = \"./Crack/dataset\"\n",
     "#学習エポック数\n",
     "num_epochs = 50\n",
     "#最良ロスの定義(初期値はinf)\n",
     "best_loss = float(\"inf\")\n",
     "#実験結果のディレクトリのパス指定\n",
-    "result_dir = \"/home/es1video10/datasets/Crack/result\"\n",
+    "result_dir = \"./Crack/result\"\n",
     "\n",
     "\n",
     "\n",
@@ -584,8 +584,8 @@
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize([0.5], [0.5])\n",
     "])\n",
-    "data_source_dir = \"/home/es1video10/datasets/Crack/dataset\"\n",
-    "result_dir = \"/home/es1video10/datasets/Crack/result\"\n",
+    "data_source_dir = \"./Crack/dataset\"\n",
+    "result_dir = \"./Crack/result\"\n",
     "check_path = result_dir + \"/checkpoint.pth.tar\"\n",
     "\n",
     "model = UNet(n_channels=n_channels, n_classes=n_classes, filter_num=filter_num, up_mode=\"interpolation\")\n",
@@ -606,42 +606,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/es1video10/pytorch/lib/python3.6/site-packages/ipykernel_launcher.py:1: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
-      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c986733dc48d4b4cad19ad1738dce93b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=21.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tbar = tqdm(test_dataloader)\n",
     "model.eval()\n",
@@ -662,13 +631,6 @@
     "        get_score(output, label, result_dir, itr)\n",
     "        save_img(output, label, result_dir, itr)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
